# wit_bindgen_975_repro

./: Cargo.toml  build-plug.sh
comp/: Cargo.toml  lib.rs
sdk/: Cargo.toml  lib.rs
src/: main.rs  utils.rs
wit/: deps.toml  plugface.wit
