[workspace]
resolver = '2'
members = [
  "sdk/", 
  "comp/", 
]

[package]
name = "wit_bindgen_975_repro"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sdk = { path = "sdk/" }

[dependencies]
wasmtime = { version = "23.0.1", features = ["component-model"] }
wasmtime-wasi = "23.0.1"
wasmtime-wasi-http = "23.0.1"

time = { version = "0.3", features = ["serde"] }
thiserror = "1"
ahash = { version = "0.8", features = ["serde"] }
dashmap = { version = "5.5", features =["serde"] }
json-canon = "0.1.3"
data-encoding = "2.6.0"
futures-lite = "1"
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-stream = "0.1"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
] }
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
